--- a/about.html
+++ b/about.html
@@ -16,14 +16,18 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact/Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
 
 
             </ul>
         </nav>
 
     </header>
-    <button>cv</button>
+    <div class="mydiv"> 
+
+        <a href="cv.html"><button>MyCV</button></a>
+
+    </div>
     <main>
 
         <h1>A Little about of myself </h1>
