--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact/Resume</a></li>
+                    <li><a href="contact.html">Contact</a></li>
             
             
                 </ul>
@@ -23,7 +23,7 @@
     </header>
 <main>
 
-    <h1>My Portfolio Website </h1>
+    <h1>My Portfolio Website 2 </h1>
     <h2>Helooooooo</h2>
     <p>
     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
