--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact/Resume</a></li>
+                    <li><a href="contact.html">Contact</a></li>
 
 
             </ul>
