--- a/blog.html
+++ b/blog.html
@@ -27,38 +27,53 @@
 
         <h1>Happy Blogging</h1>
         <h2>You Can Read my writing from here</h2>
+        <h3> এক সন্ধ্যার গল্প । </h3>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-            type specimen
-            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially
-            unchanged.
+সন্ধ্যার পর যেন চা এর আড্ডা টা ভাল জমে। সে হিসেবে রফিক মামার দোকানে চা এর অর্ডার দিয়ে শুরু হলো খোশগল্প। গল্পের কোনো আগা
+মাথা নাই। আসলে এই গল্প জিনিস টা যুগ যুগ ধরে চলে আসছে। বিভিন্ন সময় বিভিন্ন ভাবে রুপ নিয়েছে। কখনো সন্ধ্যার পর জারি গান আর
+হুকোর সাথে দারুন গল্প, কখনো মাঠে ধান লাগাতে লাগাতে ঢের গল্প, কখনো গ্রীষ্মের গরম থেকে বাচতে বাশবাগানে বসে, বটের নিচে বসে
+তাস খেলার মাঝে হাজারো গল্প কখনো আকাবাকা নিরব রাস্তায় প্রিয়জনের সাথে হেটে হেটে গল্প। আর এখন অতিশয় দেখা যায় অনলাইনে
+গ্রুপিং করে রাতদিন দিব্বি গল্প করে যাচ্ছে মানুষ। যাই হোক এই গল্পের যেন শেষ নেই। হাজার বছর ধরে এই গল্পের মাঝেই বেচে আছে
+মানুষের আশা ভরসা।<br><br><br>
+তো আমাদের গল্প টা আশেপাশের তুলনায় সাধারণত একটু ব্যাতিক্রম হয়ে থাকে। খোজ নিলে দেখা যায় যেখানেই দুই পাচ টা মানুষ আড্ডা
+দিচ্ছে সেখানে তাদের মুল টপিক্স হয়ত গার্লফ্রেন্ড, নয়ত মুভি গান এসব নিয়ে। তবে কিছু তো ব্যাতিক্রম আছে যারা এসবের বাইরে। কেউ
+পড়াশোনা নিয়ে বেজায় টেনশনে আছে সেসব নিয়ে পরিকল্পনা আটছে কেউ বা সাংসারিক ঝামেলা নিয়ে আলোচনা জপছে।
+চা আসতে দেরি হচ্ছে দেখে আমদের বন্ধু ঈমরান প্রশ্ন করে বসলো আচ্ছা রোমানিয়ান বক্সার এন্ড্রু টেইট যে মুসলিম হয়েছিল দেখলাম।
+তারপর তার কি অবস্থা। অনেক দিন খোজ খবর নেওয়াই হয়না।<br><br><br>
+পাশেই বসে ছিল আমাদের আরেক জ্ঞ্যনরাজ ফাহিম। সে সাম্প্রতিক জাতীয় আন্তর্জাতিক সব বিষয়ে খোজ খবর রাখার চেষ্টা করে। এতক্ষণে চা
+চলে এসেছে চার কাপ। আমি ঈমরান আর ফাহিম এর দিকে দুই টা চা বাড়িয়ে দিলাম আর আমি আর রাশেদ বাকি দুইটা চা তুলে নিলাম।
+এর মধ্যে দেখি ফাহিম আর ঈমরান দুজনেই চরম আলোচনা লাগিয়ে দিছে।ঈমরানের দাবি এন্ড্রু টেইট আসলে খারাপ ব্যাক্তি। তাকে নিয়ে
+প্রথম আলো আর আনন্দবাজার পত্রিকায় যেসব নিউজ দেখেছে তাতে সে এন্ড্রুর উপরে ক্ষিপ্ত। কেন ক্ষিপ্ত তার কারন এন্ড্রু নাকি মহিলা
+দের নিয়ে খারাপ ভিডিও বানানো, মহিলাদের কুকুর এর তুলনা করতো আরো কত খারাপ কাজ করত।<br><br><br>
+তো এসব শুনে ফাহিম ব্যাচারা রেগে গেছে।ওর দাবি কোনটা সত্য আর কোনটা মিথ্যা তা জাজ করার ব্যাসিক কিছু ক্রাইটেরিয়া আছে। তা না
+দেখে কোনো মানুষকে কখনো জাজ করা যায়না। এন্ড্রু টেট বক্সিং পেশা ছাড়ার পর তার মুল কাজ ছিল অনলাইনে মানুষকে প্রশিক্ষণ দেওয়া।
+আর এম্নিতেই সে ব্রিটিশ আমেরিকায় তুমুল জনপ্রিয় । তার জীবনের শুরুটাই যখন ছিল খ্রিষ্টান পরিবারে সে হিসেবে সে মাদক সহ
+বিভিন্ন নেশায় আসক্ত ছিল। আর তার অধিনে হাজার সুন্দরী মেয়েরা ছিল। তাদের সাথে আগে কি করেছে সে তার ব্যাপার। সে জাই হোক একটা
+সময় এসে এন্ড্রু পারিপার্শ্বিক বিভিন্ন বিষয়ের সাপেক্ষে বুঝতে পারে যারা ভাল কে বিশ্বাস করে এবং শয়তানের খারাপ কাজের বিপক্ষে
+সত্য কে বুঝতে চায় তাকে অবশ্যই ইসলামে কনভার্ট হতে হবে।<br><br><br>
+এর মাঝে আমি বল্লাম হ্যা সে নাকি মুসলিম ও হলো কিছু দিন আগে তার পর কি হয়েছে রে।
+ফাহিম আবার শুরু করলো তার মুল্যবান ইনফরমেটিভ বক্তব্য। আমরা তিন জন যেন তার ছাত্র সেভাবে শুনছি। সে বলছে মুসলিম দের বিষয়ে
+বিবিসি, ট্রিবিউনস, সিএনবি, স্পোর্টসকিডা এদের নিউজ একরকম আর আনন্দবাজার, প্রথম আলো, সমকাল এসব পত্রিকার নিউজ দেখবি সম্পুর্ন
+আলাদা। কারন কেউ চায় সত্য নিউজ প্রচার করতে হোক তা অল্প। আর কেউ চায় সত্যকে চাপা দিয়ে মিথ্যা নিউজ এর সাথে অশ্লীলতার অপবাদ
+দিয়ে নিউজ ছাপাতে। কারন এই উপমহাদেশে সেক্সুয়াল কন্টেন্স পাবলিক বেশি পছন্দ করে তাই মনোযোগ দিয়ে পড়ে। সেজন্য বাংলা পত্রিকা
+গুলা পড়লে তোরা এমনি বুঝবি।<br><br><br>
+ফাহিম চা শেষ করে বলছে এন্ড্রু যখন থেকে সত্য জানার চেষ্টা করেছে তখন থেকেই আরেক বক্সার টিম খান এর সংস্পর্শে থাকার চেষ্টা
+করেছে, এবং একটা সময় এসে সে তা কাছে শাহাদাত পড়ে ইসলাম গ্রহন করেছে।সেহেতু তার আগের কর্মকান্ডের জন্য যদি তার শাস্তি পেতে হয়
+তাহলে এতদিন প্রশাসন আঈন কোথায় ছিল। তখন কি পুলিশ গ্রেগতার করতে পারেনি। আসলে এন্ড্রু মুসলিম হওয়ার পর থেকেই পশ্চিমা রা একে
+একে তার একাউন্ট বন্ধ করেছে আর ভয়ভীতি দেখিয়েছে। আর নারীবাদ বিদ্বেষ বলে যা প্রচার করছে তা সম্পুর্ন এখন ভিত্তিহিন, কারন
+নারীদের পণ্য বানিয়ে যে রমরমা ব্যবসা চলছে, পর্ন ইন্ডাস্ট্রি চলছে, সোশ্যাল মিডিয়া আর বিজ্ঞাপনে নারীদের যেভাবে ব্যবহার করা
+হচ্ছে এই বিষয়ে এন্ড্রু স্পষ্ট বক্তব্য দিয়েছে। এর এসবের মুল বিষয়বস্তু হলো এন্ড্রুর ইসলাম গ্রহন করার পর জায়োনিস্ট দের মাথা
+খারাপ হয়ে গেছে।<br><br><br>
+এর মাঝে আমার সাথে থাকা রাশেদ বলছে থাক এসব নিয়ে নিজেদের মধ্যে আর ঝগড়া ঝাটি করার দরকার নাই। চল ক্যম্পাসে যেতে হবে কাল
+সকালে সিটি আছে পড়তে হবে। আমি সবার ইন্টারপ্রেটেশন শুনার পর মনে হলো ফাহিম আর ঈমরান এর ইনফরমেটিভ আলোচনা টা হয়ত রাশেদ ভেবেছে
+তর্কাতর্কি আর গ্যাঞ্জাম জাস্ট। তাই সে নেগোশিয়েট করছে। আসলে রাশেদ এই গল্প, আড্ডা, আলোচনা, বিশ্লেষণ, এর কিছুই বুঝেনা। হয়ত
+শুধু জানে চুপ করে বসে থেকে মানুষের কাছে ভাল সেজে থাকতে। হুদাই তর্কাতর্কির ভিতরে যেয়ে লাভ নাই, যদি পারি রোমান্টিক কিছু
+বিষয় বিয়ে গার্লফ্রেন্ড মুভি এসব নিয়ে ক্ষানিকটা আড্ডা মারতাম। এভাবেই রাশেদ এর মত মানুষ গুলা সমাজ কে কঠোর থেকে কঠোর বানিয়ে
+দিচ্ছে।
+(বাকি কথা পরে হবে............)
         </p>
 
 
-
-
-        <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its
-            layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-            opposed to using
-            'Content here, content here', making it look like readable English.
-        </p>
-
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-            type
-            specimen
-            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially
-            unchanged.
-        </p>
 
         <footer>
             <h3>Mahfuz Ahammed Shuruz</h3>
