--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Home2</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -27,10 +26,11 @@
     <h1>My Portfolio Website 2 </h1>
     <h2>Helooooooo</h2>
     <p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-    book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
-    unchanged.
+    I am Mahfuz Ahammed, curently final year student of dhaka university of engineering and technology major of computer science and engineering.    
+    I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. 
+    I am friendly, helpful and polite, have a good sense of humour. 
+    I am able to work independently in busy environments and also within a team setting. 
+    I am outgoing and tactful, and able to listen effectively when solving problems.
     </p>
 
     <figure> 
