--- a/about.html
+++ b/about.html
@@ -33,13 +33,10 @@
         <h1>A Little about of myself </h1>
         <h2>Helooooooo</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-            type specimen
-            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially
-            unchanged.
+            This is Mahfuz Ahammed , I am still studying B.Sc Engineering in CSE in DUET.
+            And internship Trainee at Brain Station 23 software limited. 
+            I have always loved thinking and working on programming as well as problem solving. Along with this, I am learning web development .
+            My strong interest is working with machine learning, data science, and AI.
         </p>
 
         <figure>
