--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </header>
 <main>
 
-    <h1>My Portfolio Website 2 </h1>
-    <h2>Helooooooo</h2>
+    <h1>My Portfolio Website</h1>
+    <h2>Assalamu Alaikum</h2>
     <p>
     I am Mahfuz Ahammed, curently final year student of dhaka university of engineering and technology major of computer science and engineering.    
     I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. 
