--- a/contact.html
+++ b/contact.html
@@ -28,36 +28,18 @@
         <h1>Contact Me </h1>
         <h2>You Can FInd My Info Below</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-            type specimen
-            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially
-            unchanged.
+            Email: mahfuz.duetcse@gmail.com
         </p>
 
 
 
 
         <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its
-            layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-            opposed to using
-            'Content here, content here', making it look like readable English.
+            Mobile: 01717678575
         </p>
 
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-            type
-            specimen
-            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially
-            unchanged.
+            Current Adress: STA hall DUET , joydebpur , Gazipur.
         </p>
 
         <footer>
